--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     </main>
     <!--小屏下的导航布局-->
     <main class="nav-small">
-        <a href="">1</a>
-        <a href="">2</a>
-        <a href="">3</a>
+        <a href=""><span lass="iconfont nav-icon">&#xe61d;</span></a>
+        <a href=""><span class="iconfont nav-icon">&#xe65c;</span></a>
+        <a href=""><span class="iconfont nav-icon">&#xe600;</span></a>
     </main>
 </nav>
 <!--导航结束-->
