--- a/index.html
+++ b/index.html
@@ -20,21 +20,21 @@
 <nav>
     <!--大屏下导航的布局-->
     <main class="nav-big">
-        <a><span class="iconfont nav-icon"></span></a>
+        <a><span class="iconfont nav-icon">&#xe65c;</span></a>
         <a>Mac</a>
         <a>iPad</a>
         <a>iPhone</a>
         <a>Watch</a>
         <a>Music</a>
         <a>技术支持</a>
-        <a><span class="iconfont nav-icon"></span></a>
-        <a><span class="iconfont nav-icon"></span></a>
+        <a><span class="iconfont nav-icon">&#xe620;</span></a>
+        <a><span class="iconfont nav-icon">&#xe600;</span></a>
     </main>
     <!--小屏下的导航布局-->
     <main class="nav-small">
-        <a href=""><span lass="iconfont nav-icon"></span></a>
-        <a href=""><span class="iconfont nav-icon"></span></a>
-        <a href=""><span class="iconfont nav-icon"></span></a>
+        <a href=""><span lass="iconfont nav-icon">&#xe61d;</span></a>
+        <a href=""><span class="iconfont nav-icon">&#xe65c;</span></a>
+        <a href=""><span class="iconfont nav-icon">&#xe600;</span></a>
     </main>
 </nav>
 <!--导航结束-->
